--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="1938" systemVersion="10K549" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QwK-Pb-ZTE">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QwK-Pb-ZTE">
     <dependencies>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
         <scene sceneID="mzi-Xx-fVQ">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="QwK-Pb-ZTE" sceneMemberID="viewController">
@@ -16,12 +16,14 @@
                     </tabBar>
                     <connections>
                         <segue destination="ls3-Ln-bdb" kind="relationship" relationship="viewControllers" id="I4O-Jf-Ev8"/>
+                        <segue destination="TEK-HE-mTp" kind="relationship" relationship="viewControllers" id="VdW-Cg-7oH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y7K-ZH-4cr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-462" y="39"/>
         </scene>
+        <!--Navigation Controller - Heroes-->
         <scene sceneID="oRH-xo-vgD">
             <objects>
                 <navigationController definesPresentationContext="YES" id="ls3-Ln-bdb" sceneMemberID="viewController">
@@ -37,6 +39,7 @@
             </objects>
             <point key="canvasLocation" x="-40" y="39"/>
         </scene>
+        <!--Master View Controller - Master-->
         <scene sceneID="18">
             <objects>
                 <tableViewController storyboardIdentifier="" title="Master" id="12" customClass="MasterViewController" sceneMemberID="viewController">
@@ -122,9 +125,9 @@
             </objects>
             <point key="canvasLocation" x="450" y="39"/>
         </scene>
+        <!--View Controller-->
         <scene sceneID="W4W-Ga-Enp">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cZe-Rx-Wdq" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="hZw-Nn-U4y" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9as-dU-2cA">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
@@ -142,9 +145,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="OgA-Cw-zyf"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cZe-Rx-Wdq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="426" y="-1249"/>
         </scene>
+        <!--Abilities View Controller-->
         <scene sceneID="RKh-cU-SDJ">
             <objects>
                 <viewController storyboardIdentifier="AbilityVC" id="Jts-s9-SfV" customClass="AbilitiesViewController" sceneMemberID="viewController">
@@ -195,6 +200,49 @@
             </objects>
             <point key="canvasLocation" x="-117" y="-1249"/>
         </scene>
+        <!--Table View Controller - Items-->
+        <scene sceneID="mrZ-bO-NmL">
+            <objects>
+                <tableViewController id="71I-n7-1hQ" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="IF7-uk-cQW">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="5rQ-BI-yzK">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Items" id="Yca-EL-4Zr"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hi5-hf-c8Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="51" y="-564"/>
+        </scene>
+        <!--Navigation Controller - Items-->
+        <scene sceneID="bCc-yc-2D5">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="TEK-HE-mTp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Items" image="items.png" id="cUp-GV-cIQ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0mw-UO-HNY">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="71I-n7-1hQ" kind="relationship" relationship="rootViewController" id="eme-h7-DvM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="95d-GR-g1m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-483" y="-564"/>
+        </scene>
+        <!--Information View Controller-->
         <scene sceneID="7UB-by-1hV">
             <objects>
                 <viewController storyboardIdentifier="InformationVC" id="47e-SO-JZt" customClass="InformationViewController" sceneMemberID="viewController">
@@ -220,6 +268,7 @@
             </objects>
             <point key="canvasLocation" x="426" y="-590"/>
         </scene>
+        <!--Detail View Controller-->
         <scene sceneID="u1w-LA-eN5">
             <objects>
                 <viewController id="g5B-bk-5l4" customClass="DetailViewController" sceneMemberID="viewController">
@@ -256,6 +305,7 @@
     </scenes>
     <resources>
         <image name="hero.png" width="26" height="17"/>
+        <image name="items.png" width="23" height="29"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
